# linkding

./: .gitignore  Makefile  deploy.sh  deploy_excludes  deploy_includes  gunicorn.sh  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.in  requirements.txt
bookmarks/frontend/components/: SearchAutoComplete.svelte  TagAutocomplete.svelte
bookmarks/settings/: __init__.py  base.py  custom.py  prod.py
bookmarks/templates/bookmarks/: bookmark_list.html  layout.html  nav_menu.html  new.html  tag_cloud.html
bookmarks/templates/bookmarks/bulk_edit/: toggle.html
bookmarks/templates/settings/: general.html  integrations.html  nav.html
bookmarks/tests/: test_bookmark_details_modal.py
bookmarks/views/: bookmarks.py
siteroot/settings/: base.py  prod.py
